--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
+    <div id="app">
       <div id="player-1" class="player"></div>
       <div id="player-2" class="player"></div>
       <div id="player-3" class="player"></div>
