--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
   </head>
   <body>
     <div id="app">
-      <div id="player-1" class="player"></div>
-      <div id="player-2" class="player"></div>
-      <div id="player-3" class="player"></div>
+      <div id="player-1" class="player">
+        <div class="wrapper">
+          <img
+            src="https://images.unsplash.com/photo-1557672172-298e090bd0f1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGFic3RyYWN0fGVufDB8fDB8fHww"
+            alt="arte abstrata rosa e verde parecendo mármore"
+          />
+          <div class="info">
+            <h1>Acorda Devinho</h1>
+            <p>Banda Rocketseat</p>
+          </div>
+        </div>
+      </div>
+      <div id="player-2" class="player">
+        <div class="wrapper"></div>
+      </div>
+      <div id="player-3" class="player">
+        <div class="wrapper"></div>
+      </div>
     </div>
   </body>
 </html>
