--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bora Codar - Player de Música - 01</title>
@@ -15,7 +21,7 @@
             alt="arte abstrata rosa e verde parecendo mármore"
           />
           <div class="info">
-            <h1>Acorda Devinho</h1>
+            <h1>Acorda</h1>
             <p>Banda Rocketseat</p>
           </div>
         </div>
